--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
 
 <body>
     <div class="main-container">
-        <header></header>
+        <header>
+            <nav>
+                <img src="images/logo/Booki.png" alt="Logo Booki" >
+                <div class = "menu">
+                    <a href="#ancre_hebergement.index.html">Hébergements</a>
+                    <a href="#ancre_activites.index.html">Activités</a>
+                </div>
+            </nav>
+        </header>
         <main>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
