Ajout d'une section presentation du site et du formulaire de recherche

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/f74cce6e0a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -26,6 +27,23 @@
             </nav>
         </header>
         <main>
+
+            <section class="presentation-site">
+                <div class="presentation">
+                    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                    <p>En plein centre-ville ou en pleine nature</p>
+                </div>
+                <div class="search-bar">
+                    <i class="fa-solid fa-location-dot"> </i>
+                    <form action="" method="GET">
+                        <input type="text" name="rechercher" placeholder="Marseille,France">
+                        <button type="submit" id="submit">Rechercher</button>
+                        <!-- <i class="fa-sharp fa-solid fa-magnifying-glass"></i> icone de loupe-->
+                    </form>
+                </div>
+            </section>
+
+
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
 
