--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/hebergement.css">
     <script src="https://kit.fontawesome.com/f74cce6e0a.js" crossorigin="anonymous"></script>
 </head>
 
