modif de la barre de recherche

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div class="main-container">
         <header>
             <nav>
-                <img src="images/logo/Booki.png" alt="Logo Booki" >
-                <div class = "menu">
+                <img src="images/logo/Booki.png" alt="Logo Booki">
+                <div class="menu">
                     <a href="#ancre_hebergement.index.html">Hébergements</a>
                     <a href="#ancre_activites.index.html">Activités</a>
                 </div>
@@ -35,11 +35,14 @@
                     <p>En plein centre-ville ou en pleine nature</p>
                 </div>
                 <div class="search-bar">
-                    <i class="fa-solid fa-location-dot"> </i>
+                    <div class="icone-position">
+                        <i class="fa-solid fa-location-dot"></i>
+                    </div>
                     <form action="" method="GET">
                         <input type="text" name="rechercher" placeholder="Marseille,France">
-                        <button type="submit" id="submit">Rechercher</button>
-                        <!-- <i class="fa-sharp fa-solid fa-magnifying-glass"></i> icone de loupe-->
+                        <button type="submit"><span class="submit">Rechercher</span><i
+                                class="fa-sharp fa-solid fa-magnifying-glass"></i></button>
+
                     </form>
                 </div>
             </section>
@@ -57,7 +60,8 @@
                     <div class="populaires-cards">
                         <a href="#">
                             <article class="card">
-                                <img src="./images/hebergements/emile-guillemot.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <img src="./images/hebergements/emile-guillemot.jpg"
+                                    alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">Hôtel Le soleil du matin</h3>
@@ -76,7 +80,8 @@
                         </a>
                         <a href="#">
                             <article class="card">
-                                <img src="./images/hebergements/aw-creative.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <img src="./images/hebergements/aw-creative.jpg"
+                                    alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">Chambres d’hôtes Au cœur de l’eau</h3>
@@ -95,7 +100,8 @@
                         </a>
                         <a href="#">
                             <article class="card">
-                                <img src="./images/hebergements/febrian-zakaria2.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <img src="./images/hebergements/febrian-zakaria2.jpg"
+                                    alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">Hôtel Bleu et Blanc</h3>
