changement of header

--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@
 <body>
     <div class="main-container">
         <header>
+            <img src="images/logo/Booki.png" alt="Logo Booki">
             <nav>
-                <img src="images/logo/Booki.png" alt="Logo Booki">
-                <div class="menu">
-                    <a href="#ancre_hebergement.index.html">Hébergements</a>
-                    <a href="#ancre_activites.index.html">Activités</a>
-                </div>
-            </nav>
+                <a href="#ancre_hebergement">Hébergements</a>
+                <a href="#ancre_activites">Activités</a>
+            <nav>
         </header>
         <main>
 
