--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
                     <p>En plein centre-ville ou en pleine nature</p>
                 </div>
                 <div class="search-bar">
-                    <div class="icone-position">
-                        <i class="fa-solid fa-location-dot"></i>
-                    </div>
                     <form action="" method="GET">
+                        <div class="icone-position">
+                        <i class="fa-solid fa-location-dot"></i></div>
                         <input type="text" name="rechercher" placeholder="Marseille,France">
                         <button type="submit"><span class="submit">Rechercher</span><i
                                 class="fa-sharp fa-solid fa-magnifying-glass"></i></button>
