moving the search word in the search bar

--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
                         <div class="icone-position">
                         <i class="fa-solid fa-location-dot"></i></div>
                         <input type="text" name="rechercher" placeholder="Marseille,France">
-                        <button type="submit"><span class="submit">Rechercher</span><i
-                                class="fa-sharp fa-solid fa-magnifying-glass"></i></button>
-
+                        <button type="submit"><span class="submit">Rechercher</span>
+                            <!-- <i class="fa-sharp fa-solid fa-magnifying-glass"></i> -->
+                        </button>
                     </form>
                 </div>
+
             </section>
 
 
