creation of the filter section

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <div class="main-container">
         <header>
             <img src="images/logo/Booki.png" alt="Logo Booki">
-            <nav>
+            <nav class="nav-header">
                 <a href="#ancre_hebergement">Hébergements</a>
                 <a href="#ancre_activites">Activités</a>
-            <nav>
+                <nav>
         </header>
         <main>
 
@@ -32,10 +32,12 @@
                     <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                     <p>En plein centre-ville ou en pleine nature</p>
                 </div>
+
                 <div class="search-bar">
                     <form action="" method="GET">
                         <div class="icone-position">
-                        <i class="fa-solid fa-location-dot"></i></div>
+                            <i class="fa-solid fa-location-dot"></i>
+                        </div>
                         <input type="text" name="rechercher" placeholder="Marseille,France">
                         <button type="submit"><span class="submit">Rechercher</span>
                             <!-- <i class="fa-sharp fa-solid fa-magnifying-glass"></i> -->
@@ -43,6 +45,27 @@
                     </form>
                 </div>
 
+                <div class="filters">
+                    <p>Filtres</p>
+                    <nav class="nav-filters">
+                        <div class="filters-button">
+                            <i class="fa-solid fa-money-bill-wave"></i>
+                            <p>Économique</p>
+                        </div>
+                        <div class="filters-button">
+                            <i class="fa-solid fa-person"></i>
+                            <p>Familial</p>
+                        </div>
+                        <div class="filters-button">
+                            <i class="fa-solid fa-heart"></i>
+                            <p>Romantique</p>
+                        </div>
+                        <div class="filters-button">
+                            <i class="fa-solid fa-fire"></i>
+                            <p>Nos pépites</p>
+                        </div>
+                    </nav>
+                </div>
             </section>
 
 
