--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </header>
         <main>
 
+
             <section class="presentation-site">
                 <div class="presentation">
                     <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
@@ -66,11 +67,19 @@
                         </div>
                     </nav>
                 </div>
-            </section>
 
+                <div class="info-bar">
+                    <div class="icone-info">
+                        <i class="fa-solid fa-info"></i>
+                    </div>
+                    <p>Plus de 500 logements sont disponibles dans cette ville</p>
+                </div>
+            </section>
 
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
+
+
 
                 </section>
                 <section class="populaires">
