change of the css of cards hebergements

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                 </div>
                             </article>
 
-                            <article class="card card-center">
+                            <article class="card">
                                 <img src="./images/hebergements/febrian-zakaria.jpg"
                                     alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
@@ -163,7 +163,7 @@
                                 </div>
                             </article>
 
-                            <article class="card card-center">
+                            <article class="card">
                                 <img src="./images/hebergements/marcus-loke.jpg"
                                     alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
