article replacement with div bacause no title

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <section class="hebergements">
                     <h2 class="section-title">Hébergements à Marseille</h2>
                     <div class="hebergements-cards">
-                        <article class="hebergement-card-1">
+                        <div class="hebergement-card-1">
                             <a href="#">
                                 <article class="card">
                                     <img src="./images/hebergements/fred-kleber.jpg"
@@ -147,9 +147,9 @@
                                     </div>
                                 </article>
                             </a>
-                        </article>
+                        </div>
 
-                        <article class="hebergement-card-2">
+                        <div class="hebergement-card-2">
                             <a href="#">
                                 <article class="card">
                                     <img src="./images/hebergements/annie-spratt.jpg"
@@ -212,7 +212,7 @@
                                     </div>
                                 </article>
                             </a>
-                        </article>
+                        </div>
                         <a href="#" class="afficher-plus">Afficher plus</a>
                     </div>
                 </section>
@@ -288,6 +288,12 @@
                     </div>
                 </section>
             </div>
+
+            <section>
+                <h2 class="section-title">Activités à Marseille</h2>
+                <div></div>
+            </section>
+
         </main>
         <footer></footer>
     </div>
