--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/hebergement.css">
+    <link rel="stylesheet" href="./css/activites.css">
     <script src="https://kit.fontawesome.com/f74cce6e0a.js" crossorigin="anonymous"></script>
 </head>
 
@@ -21,8 +22,8 @@
         <header>
             <img src="images/logo/Booki.png" alt="Logo Booki">
             <nav class="nav-header">
-                <a href="#ancre_hebergement">Hébergements</a>
-                <a href="#ancre_activites">Activités</a>
+                <a href="#ancre-hebergements">Hébergements</a>
+                <a href="#ancre-activites">Activités</a>
                 <nav>
         </header>
         <main>
@@ -80,7 +81,7 @@
             <!------ Section Hebergements and Populaires ------>
             <!------ Section Hebergements ------>
 
-            <div class="hebergements-and-populaires">
+            <div class="hebergements-and-populaires" id="ancre-hebergements">
                 <section class="hebergements">
                     <h2 class="section-title">Hébergements à Marseille</h2>
                     <div class="hebergements-cards">
@@ -289,9 +290,37 @@
                 </section>
             </div>
 
-            <section>
+            <!------ Section Activites ------>
+
+            <section class="activites" id="ancre-activites">
                 <h2 class="section-title">Activités à Marseille</h2>
-                <div></div>
+                <div class="activites-cards">
+                    <a href="#">
+                    <article class="card">
+                        <img src="./images/activites/reno-laithienne.jpg" alt="Photo du Vieux-Port de Marseille">
+                        <h3 class="title-photo">Vieux-Port</h3>
+                    </article>
+                    </a>
+                    <a href="#">
+                        <article class="card">
+                            <img src="./images/activites/paul-hermann.jpg" alt="Photo du Fort de Pomègues">
+                            <h3 class="title-photo">Fort de Pomègues</h3>
+                        </article>
+                    </a>
+                    <a href="#">
+                        <article class="card">
+                            <img src="./images/activites/kilyan-sockalingum.jpg"
+                                alt="Photo du Parc national des Calanques">
+                            <h3 class="title-photo">Parc national des Calanques</h3>
+                        </article>
+                    </a>
+                    <a href="#">
+                        <article class="card">
+                            <img src="./images/activites/florian-wehde.jpg" alt="Photo de Notre-Dame-de-la-Garde">
+                            <h3 class="title-photo">Notre-Dame-de-la-Garde</h3>
+                        </article>
+                    </a>
+                </div>
             </section>
 
         </main>
