--- a/index.html
+++ b/index.html
@@ -296,10 +296,10 @@
                 <h2 class="section-title">Activités à Marseille</h2>
                 <div class="activites-cards">
                     <a href="#">
-                    <article class="card">
-                        <img src="./images/activites/reno-laithienne.jpg" alt="Photo du Vieux-Port de Marseille">
-                        <h3 class="title-photo">Vieux-Port</h3>
-                    </article>
+                        <article class="card">
+                            <img src="./images/activites/reno-laithienne.jpg" alt="Photo du Vieux-Port de Marseille">
+                            <h3 class="title-photo">Vieux-Port</h3>
+                        </article>
                     </a>
                     <a href="#">
                         <article class="card">
@@ -324,7 +324,32 @@
             </section>
 
         </main>
-        <footer></footer>
+        <footer>
+            <div class="div-footer">
+                <nav class="nav-footer">
+                    <h4 class="title-footer">À propos</h4>
+                    <a href="#">Fonctionnement du site</a>
+                    <a href="#">Conditions générales</a>
+                    <a href="#">Données et confidentialité</a>
+                </nav>
+            </div>
+
+            <div class="div-footer">
+                <nav class="nav-footer">
+                    <h4 class="title-footer">Nos hébergements</h4>
+                    <a href="#">Charte qualité</a>
+                    <a href="#">Proposer votre hôtel</a>
+                </nav>
+            </div>
+
+            <div class="div-footer">
+                <nav class="nav-footer">
+                    <h4 class="title-footer">Assistance</h4>
+                    <a href="#">Centre d'aide</a>
+                    <a href="#">Nous contacter</a>
+                </nav>
+            </div>
+        </footer>
     </div>
 </body>
 
