create ul and li on header

--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
         <header>
             <img src="images/logo/Booki.png" alt="Logo Booki">
             <nav class="nav-header">
-                <a href="#ancre-hebergements">Hébergements</a>
-                <a href="#ancre-activites">Activités</a>
-                <nav>
+                <ul>
+                    <li><a href="#ancre-hebergements">Hébergements</a></li>
+                    <li><a href="#ancre-activites">Activités</a></li>
+                </ul>
+            </nav>
         </header>
         <main>
 
