--- a/index.html
+++ b/index.html
@@ -33,43 +33,48 @@
             <!------ Section Presentation ------>
 
             <section class="presentation-site">
-                <div class="presentation">
-                    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-                    <p>En plein centre-ville ou en pleine nature</p>
-                </div>
+                <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                <p>En plein centre-ville ou en pleine nature</p>
 
-                <div class="search-bar">
-                    <form action="" method="GET">
-                        <div class="icone-position">
-                            <i class="fa-solid fa-location-dot"></i>
-                        </div>
-                        <input type="text" name="rechercher" placeholder="Marseille,France">
-                        <button type="submit"><span class="submit">Rechercher</span>
-                            <!-- <i class="fa-sharp fa-solid fa-magnifying-glass"></i> -->
-                        </button>
-                    </form>
-                </div>
+                <form action="" method="GET" class="search-bar">
+                    <div class="icone-position">
+                        <i class="fa-solid fa-location-dot"></i>
+                    </div>
+                    <input type="text" name="rechercher" placeholder="Marseille, France">
+                    <button type="submit"><span class="submit">Rechercher</span>
+                        <!-- <i class="fa-sharp fa-solid fa-magnifying-glass"></i> -->
+                    </button>
+                </form>
+
 
                 <div class="filters">
                     <p>Filtres</p>
-                    <nav class="nav-filters">
-                        <div class="filters-button">
-                            <i class="fa-solid fa-money-bill-wave"></i>
-                            <p>Économique</p>
-                        </div>
-                        <div class="filters-button">
-                            <i class="fa-solid fa-person"></i>
-                            <p>Familial</p>
-                        </div>
-                        <div class="filters-button">
-                            <i class="fa-solid fa-heart"></i>
-                            <p>Romantique</p>
-                        </div>
-                        <div class="filters-button">
-                            <i class="fa-solid fa-fire"></i>
-                            <p>Nos pépites</p>
-                        </div>
-                    </nav>
+                    <div class="nav-filters">
+                        <a href="#">
+                            <div class="filters-button">
+                                <i class="fa-solid fa-money-bill-wave"></i>
+                                <p>Économique</p>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="filters-button">
+                                <i class="fa-solid fa-person"></i>
+                                <p>Familial</p>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="filters-button">
+                                <i class="fa-solid fa-heart"></i>
+                                <p>Romantique</p>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="filters-button">
+                                <i class="fa-solid fa-fire"></i>
+                                <p>Nos pépites</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
 
                 <div class="info-bar">
