--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
                 <p>En plein centre-ville ou en pleine nature</p>
 
                 <form action="" method="GET" class="search-bar">
-                    <div class="icone-position">
-                        <i class="fa-solid fa-location-dot"></i>
-                    </div>
+                    <span class="icone-position"><i class="fa-solid fa-location-dot"></i></span>
                     <input type="text" name="rechercher" placeholder="Marseille, France">
                     <button type="submit"><span class="submit">Rechercher</span>
                         <!-- <i class="fa-sharp fa-solid fa-magnifying-glass"></i> -->
@@ -78,9 +76,7 @@
                 </div>
 
                 <div class="info-bar">
-                    <div class="icone-info">
-                        <i class="fa-solid fa-info"></i>
-                    </div>
+                    <span class="icone-info"><i class="fa-solid fa-info"></i></span>
                     <p>Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
             </section>
