addind a magnifying glass icon to a span

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
                 <form action="" method="GET" class="search-bar">
                     <span class="icone-position"><i class="fa-solid fa-location-dot"></i></span>
                     <input type="text" name="rechercher" placeholder="Marseille, France">
-                    <button type="submit"><span class="submit">Rechercher</span>
-                        <!-- <i class="fa-sharp fa-solid fa-magnifying-glass"></i> -->
+                    <button type="submit">
+                        <span class="submit">Rechercher</span>
+                        <span class="loupe"><i class="fa-sharp fa-solid fa-magnifying-glass"></i></span>
                     </button>
                 </form>
 
