responsive tablet from the hosting section

--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
                                 </div>
                             </article>
                         </a>
+
                         <a href="#">
                             <article class="card">
                                 <img src="./images/hebergements/aw-creative.jpg"
@@ -299,7 +300,9 @@
                     <a href="#">
                         <article class="card">
                             <img src="./images/activites/reno-laithienne.jpg" alt="Photo du Vieux-Port de Marseille">
-                            <h3 class="title-photo">Vieux-Port</h3>
+                            <div class="card-content">
+                                <h3 class="title-photo">Vieux-Port</h3>
+                            </div>
                         </article>
                     </a>
                     <a href="#">
