--- a/index.html
+++ b/index.html
@@ -308,20 +308,26 @@
                     <a href="#">
                         <article class="card">
                             <img src="./images/activites/paul-hermann.jpg" alt="Photo du Fort de Pomègues">
-                            <h3 class="title-photo">Fort de Pomègues</h3>
+                            <div class="card-content">
+                                <h3 class="title-photo">Fort de Pomègues</h3>
+                            </div>
                         </article>
                     </a>
                     <a href="#">
                         <article class="card">
                             <img src="./images/activites/kilyan-sockalingum.jpg"
                                 alt="Photo du Parc national des Calanques">
-                            <h3 class="title-photo">Parc national des Calanques</h3>
+                            <div class="card-content">
+                                <h3 class="title-photo">Parc national des Calanques</h3>
+                            </div>
                         </article>
                     </a>
                     <a href="#">
                         <article class="card">
                             <img src="./images/activites/florian-wehde.jpg" alt="Photo de Notre-Dame-de-la-Garde">
-                            <h3 class="title-photo">Notre-Dame-de-la-Garde</h3>
+                            <div class="card-content">
+                                <h3 class="title-photo">Notre-Dame-de-la-Garde</h3>
+                            </div>
                         </article>
                     </a>
                 </div>
