--- a/index.html
+++ b/index.html
@@ -338,25 +338,31 @@
             <div class="div-footer">
                 <nav class="nav-footer">
                     <h4 class="title-footer">À propos</h4>
-                    <a href="#">Fonctionnement du site</a>
-                    <a href="#">Conditions générales</a>
-                    <a href="#">Données et confidentialité</a>
+                    <ul>
+                        <li><a href="#">Fonctionnement du site</a></li>
+                        <li><a href="#">Conditions générales</a></li>
+                        <li><a href="#">Données et confidentialité</a></li>
+                    </ul>
                 </nav>
             </div>
 
             <div class="div-footer">
                 <nav class="nav-footer">
                     <h4 class="title-footer">Nos hébergements</h4>
-                    <a href="#">Charte qualité</a>
-                    <a href="#">Proposer votre hôtel</a>
+                    <ul>
+                        <li><a href="#">Charte qualité</a></li>
+                        <li><a href="#">Proposer votre hôtel</a></li>
+                    </ul>
                 </nav>
             </div>
 
             <div class="div-footer">
                 <nav class="nav-footer">
                     <h4 class="title-footer">Assistance</h4>
-                    <a href="#">Centre d'aide</a>
-                    <a href="#">Nous contacter</a>
+                    <ul>
+                        <li><a href="#">Centre d'aide</a></li>
+                        <li><a href="#">Nous contacter</a></li>
+                    </ul>
                 </nav>
             </div>
         </footer>
