--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                     <p><span class="p-filters">Filtres</span></p>
                     <div class="nav-filters">
                         <a href="#">
-                            <div class="filters-button">
+                            <button class="filters-button" type="button">
                                 <i class="fa-solid fa-money-bill-wave"></i>
                                 <p>Économique</p>
-                            </div>
+                            </button>
                         </a>
                         <a href="#">
                             <div class="filters-button">
