color change with var

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p><span class="p-filters">Filtres</span></p>
                     <div class="nav-filters">
                         <a href="#">
-                            <button class="filters-button" type="button">
+                            <button class="filters-button">
                                 <i class="fa-solid fa-money-bill-wave"></i>
                                 <p>Économique</p>
                             </button>
