--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@
                             </button>
                         </a>
                         <a href="#">
-                            <div class="filters-button">
+                            <button class="filters-button">
                                 <i class="fa-solid fa-person"></i>
                                 <p>Familial</p>
-                            </div>
+                            </button>
                         </a>
                         <a href="#">
-                            <div class="filters-button">
+                            <button class="filters-button">
                                 <i class="fa-solid fa-heart"></i>
                                 <p>Romantique</p>
-                            </div>
+                            </button>
                         </a>
                         <a href="#">
-                            <div class="filters-button">
+                            <button class="filters-button">
                                 <i class="fa-solid fa-fire"></i>
                                 <p>Nos pépites</p>
-                            </div>
+                            </button>
                         </a>
                     </div>
                 </div>
@@ -335,36 +335,28 @@
 
         </main>
         <footer>
-            <div class="div-footer">
-                <nav class="nav-footer">
-                    <h4 class="title-footer">À propos</h4>
-                    <ul>
-                        <li><a href="#">Fonctionnement du site</a></li>
-                        <li><a href="#">Conditions générales</a></li>
-                        <li><a href="#">Données et confidentialité</a></li>
-                    </ul>
-                </nav>
-            </div>
-
-            <div class="div-footer">
-                <nav class="nav-footer">
-                    <h4 class="title-footer">Nos hébergements</h4>
-                    <ul>
-                        <li><a href="#">Charte qualité</a></li>
-                        <li><a href="#">Proposer votre hôtel</a></li>
-                    </ul>
-                </nav>
-            </div>
-
-            <div class="div-footer">
-                <nav class="nav-footer">
-                    <h4 class="title-footer">Assistance</h4>
-                    <ul>
-                        <li><a href="#">Centre d'aide</a></li>
-                        <li><a href="#">Nous contacter</a></li>
-                    </ul>
-                </nav>
-            </div>
+            <nav class="nav-footer">
+                <h4 class="title-footer">À propos</h4>
+                <ul>
+                    <li><a href="#">Fonctionnement du site</a></li>
+                    <li><a href="#">Conditions générales</a></li>
+                    <li><a href="#">Données et confidentialité</a></li>
+                </ul>
+            </nav>
+            <nav class="nav-footer">
+                <h4 class="title-footer">Nos hébergements</h4>
+                <ul>
+                    <li><a href="#">Charte qualité</a></li>
+                    <li><a href="#">Proposer votre hôtel</a></li>
+                </ul>
+            </nav>
+            <nav class="nav-footer">
+                <h4 class="title-footer">Assistance</h4>
+                <ul>
+                    <li><a href="#">Centre d'aide</a></li>
+                    <li><a href="#">Nous contacter</a></li>
+                </ul>
+            </nav>
         </footer>
     </div>
 </body>
