mobile responsive search bar

--- a/index.html
+++ b/index.html
@@ -41,14 +41,12 @@
                     <input type="text" name="rechercher" placeholder="Marseille, France">
                     <button type="submit">
                         <span class="submit">Rechercher</span>
-                        <span class="loupe"><i class="fa-sharp fa-solid fa-magnifying-glass"></i></span>
+                        <span class="loupe"><i class="fa-solid fa-magnifying-glass"></i></span>
                     </button>
                 </form>
-
-
                 <div class="filters">
                     <p><span class="p-filters">Filtres</span></p>
-                    <div class="nav-filters">
+                    <nav class="nav-filters">
                         <a href="#">
                             <button class="filters-button">
                                 <i class="fa-solid fa-money-bill-wave"></i>
@@ -73,7 +71,7 @@
                                 <p>Nos pépites</p>
                             </button>
                         </a>
-                    </div>
+                    </nav>
                 </div>
 
                 <div class="info-bar">
