html button correction for w3c validation

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             </div>
           </section>
 
-          <!------ Section Populaires ------>
+          <!-- Section Populaires -->
 
           <section class="populaires">
             <div class="populaires-title">
@@ -362,7 +362,7 @@
           </section>
         </div>
 
-        <!------ Section Activites ------>
+        <!-- Section Activites -->
 
         <section class="activites" id="ancre-activites">
           <h2 class="section-title">Activités à Marseille</h2>
