--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <div class="main-container">
       <header>
-        <img src="images/logo/Booki.png" alt="Logo Booki" />
+        <img src="images/logo/Booki.png" alt="Logo Booki">
         <nav class="nav-header">
           <ul>
             <li><a href="#ancre-hebergements">Hébergements</a></li>
@@ -38,8 +38,8 @@
         </nav>
       </header>
       <main>
-        <!-- Section Presentation -->
 
+        <!-- Section Presentation -->
         <section class="presentation-site">
           <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
           <p>En plein centre-ville ou en pleine nature</p>
@@ -97,10 +97,7 @@
             <div class="hebergements-cards">
               <a href="#">
                 <article class="card">
-                  <img
-                    src="./images/hebergements/fred-kleber.jpg"
-                    alt="Image de la chambre d'hôtel montrant un lit"
-                  />
+                  <img src="./images/hebergements/fred-kleber.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                   <div class="card-content">
                     <div class="card-txt">
                       <h3 class="card-title">Hôtel du port</h3>
@@ -125,10 +122,7 @@
 
               <a href="#">
                 <article class="card">
-                  <img
-                    src="./images/hebergements/febrian-zakaria.jpg"
-                    alt="Image de la chambre d'hôtel montrant un lit"
-                  />
+                  <img src="./images/hebergements/febrian-zakaria.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                   <div class="card-content">
                     <div class="card-txt">
                       <h3 class="card-title">Hôtel Chez Amina</h3>
@@ -153,10 +147,7 @@
 
               <a href="#">
                 <article class="card">
-                  <img
-                    src="./images/hebergements/reisetopia.jpg"
-                    alt="Image de la chambre d'hôtel montrant un lit"
-                  />
+                  <img src="./images/hebergements/reisetopia.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                   <div class="card-content">
                     <div class="card-txt">
                       <h3 class="card-title">Hôtel Les mouettes</h3>
@@ -181,10 +172,7 @@
 
               <a href="#">
                 <article class="card">
-                  <img
-                    src="./images/hebergements/annie-spratt.jpg"
-                    alt="Image de la chambre d'hôtel montrant un lit"
-                  />
+                  <img src="./images/hebergements/annie-spratt.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                   <div class="card-content">
                     <div class="card-txt">
                       <h3 class="card-title">Hôtel de la mer</h3>
@@ -209,10 +197,7 @@
 
               <a href="#">
                 <article class="card">
-                  <img
-                    src="./images/hebergements/marcus-loke.jpg"
-                    alt="Image de la chambre d'hôtel montrant un lit"
-                  />
+                  <img src="./images/hebergements/marcus-loke.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                   <div class="card-content">
                     <div class="card-txt">
                       <h3 class="card-title">Auberge La Canebière</h3>
@@ -237,10 +222,7 @@
 
               <a href="#">
                 <article class="card">
-                  <img
-                    src="./images/hebergements/nicate-lee.jpg"
-                    alt="Image de la chambre d'hôtel montrant un lit"
-                  />
+                  <img src="./images/hebergements/nicate-lee.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                   <div class="card-content">
                     <div class="card-txt">
                       <h3 class="card-title">Auberge Le Panier</h3>
@@ -276,10 +258,7 @@
             <div class="populaires-cards">
               <a href="#">
                 <article class="card">
-                  <img
-                    src="./images/hebergements/emile-guillemot.jpg"
-                    alt="Image de la chambre d'hôtel montrant un lit"
-                  />
+                  <img src="./images/hebergements/emile-guillemot.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                   <div class="card-content">
                     <div class="card-txt">
                       <h3 class="card-title">Hôtel Le soleil du matin</h3>
@@ -304,10 +283,7 @@
 
               <a href="#">
                 <article class="card">
-                  <img
-                    src="./images/hebergements/aw-creative.jpg"
-                    alt="Image de la chambre d'hôtel montrant un lit"
-                  />
+                  <img src="./images/hebergements/aw-creative.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                   <div class="card-content">
                     <div class="card-txt">
                       <h3 class="card-title">
@@ -333,10 +309,7 @@
               </a>
               <a href="#">
                 <article class="card">
-                  <img
-                    src="./images/hebergements/febrian-zakaria2.jpg"
-                    alt="Image de la chambre d'hôtel montrant un lit"
-                  />
+                  <img src="./images/hebergements/febrian-zakaria2.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                   <div class="card-content">
                     <div class="card-txt">
                       <h3 class="card-title">Hôtel Bleu et Blanc</h3>
@@ -369,10 +342,7 @@
           <div class="activites-cards">
             <a href="#">
               <article class="card">
-                <img
-                  src="./images/activites/reno-laithienne.jpg"
-                  alt="Photo du Vieux-Port de Marseille"
-                />
+                <img src="./images/activites/reno-laithienne.jpg" alt="Photo du Vieux-Port de Marseille">
                 <div class="card-content">
                   <h3 class="title-photo">Vieux-Port</h3>
                 </div>
@@ -380,10 +350,7 @@
             </a>
             <a href="#">
               <article class="card">
-                <img
-                  src="./images/activites/paul-hermann.jpg"
-                  alt="Photo du Fort de Pomègues"
-                />
+                <img src="./images/activites/paul-hermann.jpg" alt="Photo du Fort de Pomègues">
                 <div class="card-content">
                   <h3 class="title-photo">Fort de Pomègues</h3>
                 </div>
@@ -391,10 +358,7 @@
             </a>
             <a href="#">
               <article class="card">
-                <img
-                  src="./images/activites/kilyan-sockalingum.jpg"
-                  alt="Photo du Parc national des Calanques"
-                />
+                <img src="./images/activites/kilyan-sockalingum.jpg" alt="Photo du Parc national des Calanques">
                 <div class="card-content">
                   <h3 class="title-photo">Parc national des Calanques</h3>
                 </div>
@@ -402,10 +366,7 @@
             </a>
             <a href="#">
               <article class="card">
-                <img
-                  src="./images/activites/florian-wehde.jpg"
-                  alt="Photo de Notre-Dame-de-la-Garde"
-                />
+                <img src="./images/activites/florian-wehde.jpg" alt="Photo de Notre-Dame-de-la-Garde">
                 <div class="card-content">
                   <h3 class="title-photo">Notre-Dame-de-la-Garde</h3>
                 </div>
