creation of a :active for mobile menu

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/info.css" />
     <link rel="stylesheet" href="./css/hebergement.css" />
     <link rel="stylesheet" href="./css/activites.css" />
     <script
@@ -40,11 +41,11 @@
       <main>
 
         <!-- Section Presentation -->
-        <section class="presentation-site">
+        <aside class="presentation-site">
           <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
           <p>En plein centre-ville ou en pleine nature</p>
 
-          <form action="" method="GET" class="search-bar">
+          <form action="#" method="GET" class="search-bar">
             <span class="icone-position"
               ><i class="fa-solid fa-location-dot"></i
             ></span>
@@ -62,7 +63,7 @@
           </form>
           <div class="filters">
             <p><span class="p-filters">Filtres</span></p>
-            <nav class="nav-filters">
+            <div class="div-filters">
               <button class="filters-button">
                 <i class="fa-solid fa-money-bill-wave"></i>
                 Économique
@@ -79,14 +80,14 @@
                 <i class="fa-solid fa-fire"></i>
                 Nos pépites
               </button>
-            </nav>
+            </div>
           </div>
 
           <div class="info-bar">
             <span class="icone-info"><i class="fa-solid fa-info"></i></span>
             <p>Plus de 500 logements sont disponibles dans cette ville</p>
           </div>
-        </section>
+        </aside>
 
         <!-- Section Hebergements and Populaires -->
         <!-- Section Hebergements -->
