deletion of slashes and unnecessary spaces

--- a/index.html
+++ b/index.html
@@ -1,26 +1,19 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booki</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet" 
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/info.css" />
-    <link rel="stylesheet" href="./css/hebergement.css" />
-    <link rel="stylesheet" href="./css/activites.css" />
+      crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/info.css">
+    <link rel="stylesheet" href="./css/hebergement.css">
+    <link rel="stylesheet" href="./css/activites.css">
     <script
       src="https://kit.fontawesome.com/f74cce6e0a.js"
       crossorigin="anonymous"
@@ -46,40 +39,20 @@
           <p>En plein centre-ville ou en pleine nature</p>
 
           <form action="#" method="GET" class="search-bar">
-            <span class="icone-position"
-              ><i class="fa-solid fa-location-dot"></i
-            ></span>
-            <input
-              type="text"
-              name="rechercher"
-              placeholder="Marseille, France"
-            />
+            <span class="icone-position"><i class="fa-solid fa-location-dot"></i></span>
+            <input type="text" name="rechercher" placeholder="Marseille, France">
             <button type="submit">
               <span class="submit">Rechercher</span>
-              <span class="loupe"
-                ><i class="fa-solid fa-magnifying-glass"></i
-              ></span>
+              <span class="loupe"><i class="fa-solid fa-magnifying-glass"></i></span>
             </button>
           </form>
           <div class="filters">
             <p><span class="p-filters">Filtres</span></p>
             <div class="div-filters">
-              <button class="filters-button">
-                <i class="fa-solid fa-money-bill-wave"></i>
-                Économique
-              </button>
-              <button class="filters-button">
-                <i class="fa-solid fa-person"></i>
-                Familial
-              </button>
-              <button class="filters-button">
-                <i class="fa-solid fa-heart"></i>
-                Romantique
-              </button>
-              <button class="filters-button">
-                <i class="fa-solid fa-fire"></i>
-                Nos pépites
-              </button>
+              <button class="filters-button"><i class="fa-solid fa-money-bill-wave"></i>Économique</button>
+              <button class="filters-button"><i class="fa-solid fa-person"></i>Familial</button>
+              <button class="filters-button"><i class="fa-solid fa-heart"></i>Romantique</button>
+              <button class="filters-button"><i class="fa-solid fa-fire"></i>Nos pépites</button>
             </div>
           </div>
 
@@ -91,7 +64,6 @@
 
         <!-- Section Hebergements and Populaires -->
         <!-- Section Hebergements -->
-
         <div class="hebergements-and-populaires" id="ancre-hebergements">
           <section class="hebergements">
             <h2 class="section-title">Hébergements à Marseille</h2>
@@ -102,19 +74,14 @@
                   <div class="card-content">
                     <div class="card-txt">
                       <h3 class="card-title">Hôtel du port</h3>
-                      <p class="card-subtitle">
-                        Nuit à partir de 52<span class="euro">€</span>
-                      </p>
+                      <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
                     </div>
                     <div class="card-rating">
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i
-                        class="fa-xs fa-solid fa-star neutral-star"
-                        aria-hidden="true"
-                      ></i>
+                      <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
@@ -127,19 +94,14 @@
                   <div class="card-content">
                     <div class="card-txt">
                       <h3 class="card-title">Hôtel Chez Amina</h3>
-                      <p class="card-subtitle">
-                        Nuit à partir de 96<span class="euro">€</span>
-                      </p>
+                      <p class="card-subtitle">Nuit à partir de 96<span class="euro">€</span></p>
                     </div>
                     <div class="card-rating">
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i
-                        class="fa-xs fa-solid fa-star neutral-star"
-                        aria-hidden="true"
-                      ></i>
+                      <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
@@ -152,19 +114,14 @@
                   <div class="card-content">
                     <div class="card-txt">
                       <h3 class="card-title">Hôtel Les mouettes</h3>
-                      <p class="card-subtitle">
-                        Nuit à partir de 76<span class="euro">€</span>
-                      </p>
+                      <p class="card-subtitle">Nuit à partir de 76<span class="euro">€</span></p>
                     </div>
                     <div class="card-rating">
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i
-                        class="fa-xs fa-solid fa-star neutral-star"
-                        aria-hidden="true"
-                      ></i>
+                      <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
@@ -177,19 +134,14 @@
                   <div class="card-content">
                     <div class="card-txt">
                       <h3 class="card-title">Hôtel de la mer</h3>
-                      <p class="card-subtitle">
-                        Nuit à partir de 46<span class="euro">€</span>
-                      </p>
+                      <p class="card-subtitle">Nuit à partir de 46<span class="euro">€</span></p>
                     </div>
                     <div class="card-rating">
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i
-                        class="fa-xs fa-solid fa-star neutral-star"
-                        aria-hidden="true"
-                      ></i>
+                      <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
@@ -202,19 +154,14 @@
                   <div class="card-content">
                     <div class="card-txt">
                       <h3 class="card-title">Auberge La Canebière</h3>
-                      <p class="card-subtitle">
-                        Nuit à partir de 25<span class="euro">€</span>
-                      </p>
+                      <p class="card-subtitle">Nuit à partir de 25<span class="euro">€</span></p>
                     </div>
                     <div class="card-rating">
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i
-                        class="fa-xs fa-solid fa-star neutral-star"
-                        aria-hidden="true"
-                      ></i>
+                      <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
@@ -227,30 +174,25 @@
                   <div class="card-content">
                     <div class="card-txt">
                       <h3 class="card-title">Auberge Le Panier</h3>
-                      <p class="card-subtitle">
-                        Nuit à partir de 23<span class="euro">€</span>
-                      </p>
+                      <p class="card-subtitle">Nuit à partir de 23<span class="euro">€</span></p>
                     </div>
                     <div class="card-rating">
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i
-                        class="fa-xs fa-solid fa-star neutral-star"
-                        aria-hidden="true"
-                      ></i>
+                      <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
                 </article>
               </a>
+
               <a href="#" class="afficher-plus">Afficher plus</a>
             </div>
           </section>
 
           <!-- Section Populaires -->
-
           <section class="populaires">
             <div class="populaires-title">
               <h2 class="section-title">Les plus populaires</h2>
@@ -263,19 +205,14 @@
                   <div class="card-content">
                     <div class="card-txt">
                       <h3 class="card-title">Hôtel Le soleil du matin</h3>
-                      <p class="card-subtitle">
-                        Nuit à partir de 128<span class="euro">€</span>
-                      </p>
+                      <p class="card-subtitle">Nuit à partir de 128<span class="euro">€</span></p>
                     </div>
                     <div class="card-rating">
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i
-                        class="fa-xs fa-solid fa-star neutral-star"
-                        aria-hidden="true"
-                      ></i>
+                      <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
@@ -290,43 +227,34 @@
                       <h3 class="card-title">
                         Chambres d’hôtes Au cœur de l’eau
                       </h3>
-                      <p class="card-subtitle">
-                        Nuit à partir de 71<span class="euro">€</span>
-                      </p>
+                      <p class="card-subtitle">Nuit à partir de 71<span class="euro">€</span></p>
                     </div>
                     <div class="card-rating">
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i
-                        class="fa-xs fa-solid fa-star neutral-star"
-                        aria-hidden="true"
-                      ></i>
+                      <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
                 </article>
               </a>
+
               <a href="#">
                 <article class="card">
                   <img src="./images/hebergements/febrian-zakaria2.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                   <div class="card-content">
                     <div class="card-txt">
                       <h3 class="card-title">Hôtel Bleu et Blanc</h3>
-                      <p class="card-subtitle">
-                        Nuit à partir de 68<span class="euro">€</span>
-                      </p>
+                      <p class="card-subtitle">Nuit à partir de 68<span class="euro">€</span></p>
                     </div>
                     <div class="card-rating">
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i
-                        class="fa-xs fa-solid fa-star neutral-star"
-                        aria-hidden="true"
-                      ></i>
+                      <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
@@ -337,7 +265,6 @@
         </div>
 
         <!-- Section Activites -->
-
         <section class="activites" id="ancre-activites">
           <h2 class="section-title">Activités à Marseille</h2>
           <div class="activites-cards">
@@ -349,6 +276,7 @@
                 </div>
               </article>
             </a>
+
             <a href="#">
               <article class="card">
                 <img src="./images/activites/paul-hermann.jpg" alt="Photo du Fort de Pomègues">
@@ -357,6 +285,7 @@
                 </div>
               </article>
             </a>
+
             <a href="#">
               <article class="card">
                 <img src="./images/activites/kilyan-sockalingum.jpg" alt="Photo du Parc national des Calanques">
@@ -365,6 +294,7 @@
                 </div>
               </article>
             </a>
+
             <a href="#">
               <article class="card">
                 <img src="./images/activites/florian-wehde.jpg" alt="Photo de Notre-Dame-de-la-Garde">
@@ -376,6 +306,7 @@
           </div>
         </section>
       </main>
+
       <footer>
         <nav class="nav-footer">
           <h4 class="title-footer">À propos</h4>
@@ -385,6 +316,7 @@
             <li><a href="#">Données et confidentialité</a></li>
           </ul>
         </nav>
+
         <nav class="nav-footer">
           <h4 class="title-footer">Nos hébergements</h4>
           <ul>
@@ -392,6 +324,7 @@
             <li><a href="#">Proposer votre hôtel</a></li>
           </ul>
         </nav>
+
         <nav class="nav-footer">
           <h4 class="title-footer">Assistance</h4>
           <ul>
